@@ -13,7 +13,6 @@ import org.hibernate.SessionFactory;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -30,9 +29,9 @@ public class SQLiteTrackPlaylistRepository extends HibernateRepository<TrackPlay
 
     @Override
     public List<TrackPlaylist> search(String playlistId) {
-        Filter playlistFilter = Filter.create("playlistId", "contains", playlistId);
-        Criteria criteria = new Criteria(new Filters(Arrays.asList(playlistFilter)), Order.asc("position"));
-        var result = byCriteria(new Criteria(new Filters(List.of(playlistFilter)), Order.none()));
+        Filter   playlistFilter = Filter.create("playlistId", "contains", playlistId);
+        Criteria criteria       = new Criteria(new Filters(List.of(playlistFilter)), Order.asc("position"));
+        var      result         = byCriteria(new Criteria(new Filters(List.of(playlistFilter)), Order.none()));
         System.out.println(result.toString());
         return result;
     }
